# CMake_Dummies

./: .gitignore  CMakeLists.txt  Notes.txt  hello_world.c  myBuild.sh
include/: ikea.h
lib/ikea/: CMakeLists.txt  ikea.c
src/: CMakeLists.txt  hello_world.c
src/lib/ikea/: CMakeLists.txt
tests/: CMakeLists.txt
